--- a/icustom.security/src/main/resources/static/hello.html
+++ b/icustom.security/src/main/resources/static/hello.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html>
 <head>
-<title>Hello AngularJS Hello World!</title>
-<link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
+<title>Hello security AngularJS</title>
+<link href="bootstrap3.3.5/css/bootstrap.css" rel="stylesheet"></link>
+<link href="css/app.css" rel="stylesheet"></link>
+<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.css" />
+
 <style type="text/css">
 [ng\:cloak], [ng-cloak], .ng-cloak {
 	display: none !important;
@@ -12,18 +13,15 @@
 </style>
 </head>
 
-<body ng-app="hello">
-	<div class="container">
-		<h1>Greeting</h1>
-		<div ng-controller="home" ng-cloak class="ng-cloak">
-			<p>The ID is {{greeting.id}}</p>
-			<p>The content is {{greeting.content}}</p>
-		</div>
+<body ng-app="hello" ng-cloak class="ng-cloak">
+	<div ng-controller="navigation" class="container">
+		<ul class="nav nav-pills" role="tablist">
+			<li class="active"><a href="/">home</a></li>
+			<li><a href="/login">login</a></li>
+			<li ng-show="authenticated"><a href="" ng-click="logout()">logout</a></li>
+		</ul>
 	</div>
-	<h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
-        <form th:action="@{/logout}" method="post">
-            <input type="submit" value="Sign Out"/>
-        </form>
+	<div ng-view class="container"></div>
 	<script src="angular/angular.min.js" type="text/javascript"></script>
 	<script src="js/hello.js"></script>
 </body>
