--- a/icustom.security/src/main/resources/static/home.html
+++ b/icustom.security/src/main/resources/static/home.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
-        <title>Spring Security Example</title>
+        <title>icustom Spring Security Welcome!</title>
+        <link href="bootstrap3.3.5/css/bootstrap.css" rel="stylesheet"></link>
+<link href="css/app.css" rel="stylesheet"></link>
+<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.css" />
+        
     </head>
     <body>
         <h1>Welcome!</h1>
