--- a/icustom.security/icustom.security.config/src/main/resources/static/hello.html
+++ b/icustom.security/icustom.security.config/src/main/resources/static/hello.html
@@ -22,6 +22,9 @@
 	<script src="js/hello.js"></script>
 </div>
 
+<h1>Welcome!  hello</h1>
+<p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
+
 
 
 
