--- a/icustom.security/icustom.security.core/src/main/resources/static/accessDenied.html
+++ b/icustom.security/icustom.security.core/src/main/resources/static/accessDenied.html
@@ -1,12 +1,11 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
+
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>AccessDenied page</title>
 </head>
 <body>
-	Dear <strong>${user}</strong>, You are not authorized to access this page
-	<a href="<c:url value="/logout" />">Logout</a>
+	Dear <strong>user</strong>, You are not authorized to access this page
+	<a href="/logout">Logout</a>
 </body>
 </html>
