--- a/icustom.security/icustom.security.core/src/main/resources/static/hello.html
+++ b/icustom.security/icustom.security.core/src/main/resources/static/hello.html
@@ -9,21 +9,8 @@
 	display: none !important;
 }
 </style>
-<div ng-app="hello" ng-cloak class="ng-cloak">
-	<div ng-controller="navigation" class="container">
-		<ul class="nav nav-pills" role="tablist">
-			<li class="active"><a href="/">home</a></li>
-			<li><a href="/login">login</a></li>
-			<li ng-show="authenticated"><a href="" ng-click="logout()">logout</a></li>
-		</ul>
-	</div>
-	<div ng-view class="container"></div>
-	<script src="angular/angular.min.js" type="text/javascript"></script>
-	<script src="js/hello.js"></script>
-</div>
-
 <h1>Welcome!  hello</h1>
-<p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
+<p>hello here</a> to see a greeting.</p>
 
 
 
