--- a/icustom.resources/src/main/resources/web/header.html
+++ b/icustom.resources/src/main/resources/web/header.html
@@ -5,13 +5,13 @@
 <title>i-custom</title>
 <!-- ALL STYLESHEET -->
 <link media="" rel="stylesheet" type="text/css" href="/resources/jquery/themes/material/easyui.css">
-<link rel="stylesheet" type="text/css" href="/resources/jquery/themes/icon.css">
-<link rel="stylesheet" type="text/css" href="/resources/bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="/resources/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="/resources/css/style.css">
-<link rel="stylesheet" type="text/css" href="/resources/css/responsive.css">
-<link rel="stylesheet" type="text/css" href="/resources/css/menu.css">
-<link rel="stylesheet" type="text/css" href="/resources/css/ui.css">
+<link media="" rel="stylesheet" type="text/css" href="/resources/jquery/themes/icon.css">
+<link media="" rel="stylesheet" type="text/css" href="/resources/bootstrap/css/bootstrap.min.css">
+<link media="" rel="stylesheet" type="text/css" href="/resources/css/font-awesome.min.css">
+<link media="" rel="stylesheet" type="text/css" href="/resources/css/style.css">
+<link media="" rel="stylesheet" type="text/css" href="/resources/css/responsive.css">
+<link media="" rel="stylesheet" type="text/css" href="/resources/css/menu.css">
+<link media="" rel="stylesheet" type="text/css" href="/resources/css/ui.css">
 
 <!-- 字符有乱码 -->
 
