--- a/icustom.security/icustom.security.core/src/main/resources/static/login.html
+++ b/icustom.security/icustom.security.core/src/main/resources/static/login.html
@@ -1,5 +1,7 @@
 
-<link href="css/app.css" rel="stylesheet"></link>
+<link rel="stylesheet" type="text/css" href="/resources/bootstrap/css/bootstrap.min.css">
+<link href="/css/app.css" rel="stylesheet"></link>
+<link rel="stylesheet" type="text/css" href="/resources/css/font-awesome.min.css">
 
 <div id="mainWrapper">
 	<div class="login-container">
