--- a/common/common.excel/src/main/resources/web/excel/index.html
+++ b/common/common.excel/src/main/resources/web/excel/index.html
@@ -6,7 +6,7 @@
 
 <div class="container">
 	<div class="page-header">
-		<h1>Language Manager</h1>
+		<h1>Export Manager</h1>
 	</div>
 	<div class="panel panel-default">
 		<div class="panel-body">
