--- a/common/common.htmlarea/src/main/resources/web/htmlarea/index.html
+++ b/common/common.htmlarea/src/main/resources/web/htmlarea/index.html
@@ -13,9 +13,9 @@
 		</div>
 		<div class="panel panel-default">
 			<div class="panel-body">
-				<form class="form-inline" method="post" id="navigation_search_form">
+				<form class="form-inline" method="post" id="htmlarea_search_form">
 					<div class="form-group">
-						<input type="text" class="form-control" placeholder="导航名称"
+						<input type="text" class="form-control" placeholder="名称"
 							id="keyword">
 					</div>
 					<button type="submit" class="btn btn-default">
@@ -23,7 +23,7 @@
 					</button>
 					<div class="pull-right">
 						<button type="button" class="btn btn-success"
-							id="navigation_create">
+							id="htmlarea_create">
 							<i class="fa fa-plus"></i> 新增
 						</button>
 					</div>
@@ -32,11 +32,11 @@
 		</div>
 		<div class="panel panel-default">
 			<div class="panel-heading">富文本列表</div>
-			<div class="panel-body" id="navigation_list"></div>
+			<div class="panel-body" id="htmlarea_list"></div>
 		</div>
 	</div>
 
-	<div class="modal" id="navigation_modal">
+	<div class="modal" id="htmlarea_modal">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -46,7 +46,7 @@
 				<div class="modal-body"></div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-primary"
-						id="navigation_modal_submit">
+						id="htmlarea_modal_submit">
 						<i class="fa fa-save"></i> Save
 					</button>
 				</div>
@@ -55,9 +55,9 @@
 	</div>
 
 	<script type="text/x-handlebars-template"
-		id="navigation_table_template">
+		id="htmlarea_table_template">
     {{#if data}}
-        <table class="table table-hover" id="navigation_table">
+        <table class="table table-hover" id="htmlarea_table">
             <thead>
                 <tr>
                     <th>ID</th>
@@ -87,7 +87,7 @@
 </script>
 
 	<script type="text/x-handlebars-template-partial"
-		id="navigation_table_tr_template">
+		id="htmlarea_table_tr_template">
     <tr data-id="{{itemId}}" data-name="{{itemName}}">
         <td>{{itemId}}</td>
         <td>{{itemName}}</td>
@@ -100,15 +100,15 @@
         <td>{{updateLastUser}}</td>
         <td>{{updateLastDate}}</td>
         <td>
-            <button class="btn btn-xs btn-primary navigation_edit" title="Edit"><i class="fa fa-fw fa-edit"></i></button>
-            <button class="btn btn-xs btn-default navigation_delete" title="Delete"><i class="fa fa-fw fa-trash-o"></i></button>
+            <button class="btn btn-xs btn-primary htmlarea_edit" title="Edit"><i class="fa fa-fw fa-edit"></i></button>
+            <button class="btn btn-xs btn-default htmlarea_delete" title="Delete"><i class="fa fa-fw fa-trash-o"></i></button>
         </td>
     </tr>
 </script>
 
 
 	<script type="text/x-handlebars-template"
-		id="navigation_modal_form_template">
+		id="htmlarea_modal_form_template">
 	<form id="editor_html_area">
         <input type="hidden" id="itemId" value="{{itemId}}">
 		<input type="hidden" id="parentId" value="{{parentId}}">
@@ -125,9 +125,13 @@
 		</textarea>
 
         <div class="form-group">
-            <div class="form-group">
+            <div class="form-group" style="width:46%;margin:3px;float:left;">
             	<label for="orderCode">排序码:</label>
             	<input type="text" value="{{orderCode}}" class="form-control" id="orderCode">
+        	</div>
+            <div class="form-group" style="width:46%;margin:3px;float:left;">
+            	<label for="map_type">映射类型:</label>
+            	<input type="text" value="{{orderCode}}" class="form-control" id="map_type">
         	</div>
         </div>
     </form>
@@ -148,32 +152,32 @@
 		$(function() {
 
 			// 显示所有产品
-			//$('body').hide(); // 隐藏界面
-			/*NavigationService.findNavigations(function() {
+			$('body').hide(); // 隐藏界面
+			HtmlAreaService.findHtmlAreas(function() {
+			});
 			    $('body').show(); // 显示界面
-			});*/
 
 			// 根据关键字查询产品
-			$('#navigation_search_form').on('submit', function() {
+			$('#htmlarea_search_form').on('submit', function() {
 				var keyword = $('#keyword').val().trim();
-				NavigationService.findNavigationsByName(keyword);
+				HtmlAreaService.findHtmlAreasByName(keyword);
 				return false;
 			});
 
 			// 点击 Edit 按钮，弹出编辑产品对话框
-			$(document).on('click', '#navigation_table .navigation_edit',
+			$(document).on('click', '#htmlarea_table .htmlarea_edit',
 					function() {
 						var $tr = $(this).closest('tr');
 						var itemId = $tr.data('id');
-						NavigationService.findNavigationById(itemId);
-						$('#navigation_modal').modal('show');
+						HtmlAreaService.findHtmlAreaById(itemId);
+						$('#htmlarea_modal').modal('show');
 						return false;
 					});
 
 			// 点击 Delete 按钮，删除产品
 			$(document).on(
 					'click',
-					'#navigation_table .navigation_delete',
+					'#htmlarea_table .htmlarea_delete',
 					function() {
 						var $tr = $(this).closest('tr');
 						var itemId = $tr.data('id');
@@ -181,13 +185,13 @@
 						console.warn(itemId, name);
 						if (confirm('Do you want to delete this navigation? ['
 								+ name + ']')) {
-							NavigationService.deleteNavigationById(itemId);
+							HtmlAreaService.deleteHtmlAreaById(itemId);
 						}
 						return false;
 					});
 
 			// 点击 Create 按钮，弹出创建产品对话框
-			$('#navigation_create').on('click', function() {
+			$('#htmlarea_create').on('click', function() {
 				var form = $('#editor_html_area').clone();
 				var title = 'Create HtmlArea';
 				var navigation = {
@@ -198,7 +202,7 @@
 					url : ''
 				};
 
-				NavigationView.renderNavigationModal(title, navigation);
+				HtmlAreaView.renderHtmlAreaModal(title, navigation);
 				KindEditor.create('textarea[name="content1"]', {
 					resizeType : 1,
 					afterCreate : function() {
@@ -209,12 +213,12 @@
 						this.sync();
 					}
 				});
-				$('#navigation_modal').modal('show');
+				$('#htmlarea_modal').modal('show');
 
 			});
 
 			// 点击对话框中的 Save 按钮，创建或更新产品
-			$('#navigation_modal_submit').on('click', function() {
+			$('#htmlarea_modal_submit').on('click', function() {
 				var id = $('#itemId').val();
 				var navigation = {
 					itemId : id,
@@ -226,12 +230,17 @@
 				};
 				//console.warn(id,navigation);
 				if (id == 0) {
-					NavigationService.createNavigation(navigation);
+					HtmlAreaService.createHtmlArea(navigation);
 				} else {
-					NavigationService.updateNavigation(navigation);
+					HtmlAreaService.updateHtmlArea(navigation);
 				}
-				$('#navigation_modal').modal('hide');
+				$('#htmlarea_modal').modal('hide');
 			});
 			//
 		});
 	</script>
+	
+<style type="text/css">
+	.modal-content{width:738px;margin:0px auto;}
+</style>	
+	
