--- a/icustom.international/icustom.international.impl/src/main/resources/web/international/index.html
+++ b/icustom.international/icustom.international.impl/src/main/resources/web/international/index.html
@@ -56,17 +56,17 @@
 					</span> 
 						<input type="text" style="width: 38%;margin-left:58px;" class="easyui-datebox form-control"
 						id="enddate" name="enddate"
-						data-options="prompt:'请选择结束日期',editable:false,required:'true',disabled:true,validType:'equaldDate[\'#startdate\']'">
+						data-options="prompt:'请选择结束日期',editable:false,required:'true',validType:'equaldDate[\'#startdate\']'">
 				</div>
 
 				<div
 					class="form-group my-form-group form-search-btn-group my-form-row"
 					style="text-align: center;">
 					<button type="submit" class="btn btn-success">
-						<i class="fa fa-search"></i> Search
+						<i class="fa fa-undo"></i> Reset
 					</button>
 					<button type="submit" class="btn btn-success">
-						<i class="fa fa-undo"></i> Reset
+						<i class="fa fa-search"></i> Search
 					</button>
 				</div>
 			</form>
@@ -234,7 +234,7 @@
 </script>
 
 <script src="../resources/utils/formatDate.js"></script>
-<script src="js/global.js"></script>
+<script src="../resources/js/global.js"></script>
 <script src="js/LanguageView.js"></script>
 <script src="js/LanguageService.js"></script>
 
