--- a/icustom.lookup/icustom.lookup.impl/src/main/resources/web/lookup/index.html
+++ b/icustom.lookup/icustom.lookup.impl/src/main/resources/web/lookup/index.html
@@ -288,7 +288,7 @@
 	</tr>
 </script>
 
-<script src="js/global.js"></script>
+<script src="../resources/js/global.js"></script>
 <script src="js/LookupView.js"></script>
 <script src="js/LookupService.js"></script>
 <script src="js/items/LookupItemView.js"></script>
