--- a/common/common.htmlarea/src/main/resources/web/htmlarea/index.html
+++ b/common/common.htmlarea/src/main/resources/web/htmlarea/index.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>HtmlArea Manager</title>
-</head>
-<body>
-
-	<link rel="stylesheet" href="../kindeditor/themes/default/default.css" />
+<link rel="stylesheet" href="../kindeditor/themes/default/default.css" />
 	<link rel="stylesheet" href="../kindeditor/plugins/code/prettify.css" />
 	<script charset="utf-8" src="../kindeditor/kindeditor-all.js"></script>
 	<script charset="utf-8" src="../kindeditor/lang/zh-CN.js"></script>
@@ -14,6 +6,7 @@
 
 	<script src="../resources/utils/formatDate.js"></script>
 	<script src="../resources/js/global.js"></script>
+	<script src="js/global.js"></script>
 	<script src="js/HtmlAreaView.js"></script>
 	<script src="js/HtmlAreaService.js"></script>
 	
