--- a/common/common.htmlarea/src/main/resources/web/htmlarea/index.html
+++ b/common/common.htmlarea/src/main/resources/web/htmlarea/index.html
@@ -88,7 +88,7 @@
 							<i class="fa fa-chevron-right" aria-hidden="true"></i> <span
 							class="sr-only">TO</span>
 						</span> <input type="text" style="width: 38%; margin-left: 58px;"
-							class="easyui-datebox form-control" id="createdToDate" name="createdToDate"
+							class="easyui-datebox form-control" id="createToDate" name="createToDate"
 							data-options="formatter:myformatter2,parser:myparser,prompt:'请选择结束日期',editable:false,required:'true',validType:'equaldDate[\'#createFromDate\']'">
 					</div>
 
