--- a/common/common.htmlarea/src/main/resources/web/htmlarea/index.html
+++ b/common/common.htmlarea/src/main/resources/web/htmlarea/index.html
@@ -1,5 +1,5 @@
 
-<link rel="stylesheet" href="../kindeditor/themes/default/default.css" />
+<link rel="stylesheet" type="" href="../kindeditor/themes/default/default.css" />
 <link rel="stylesheet" href="../kindeditor/plugins/code/prettify.css" />
 <link rel="stylesheet" href="HtmlArea.css" />
 
